Fix collapsing menu on small screens
Prevent menu from collapsing on screens less than 360px

--- a/src/style.css
+++ b/src/style.css
@@ -96,6 +96,8 @@ body {
   grid-column: 2 / 4;
   grid-row: 2 / 4;
   margin: auto;
+  min-height: 145px;
+  min-width: 145px;
   width: 40vw;
   z-index: 2;
 }
@@ -124,6 +126,7 @@ body {
   display: flex;
   flex: 0 0 35%;
   justify-content: space-between;
+  min-width: 98px;
   /* width: 70%; */
 }
 
